Fixed overflow padding on hero

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,7 +2,11 @@
 @import url('//fonts.googleapis.com/css?family=Montserrat:300, 500');
 @import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
 
+/* * { border: 1px solid black; }*/
+
 body {
+  margin:0;
+  overflow-x: hidden !important;
   background-color: #fdf3f2;  
   margin: 0px;
   font-size: 1.1rem;
